Add style & text color property

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %} </title>
+    <title>{% block title %}{% endblock %}</title>
+    {% block styleSheets %}{% endblock %}
 </head>
 <body>
     
+
+    <main>
+        {% block main %}{% endblock %}
+    </main>
+
+    <footer>
+        {% include "_footer.html.twig" %}
+    </footer>
+
+    {% block javascripts %}{% endblock %}
+    <script src="{{ asset('assets/js/header.js') }}"></script>
 </body>
 </html>
