--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -1,4 +1,4 @@
-<div class="ft-wrapper">
+<div class="footer-wrapper">
         <div class="ft-head">
             <div class="ft-hcontain">
                 <a href="#"><img class="ft-logosite" src="{{ asset('assets/logo/ecoIt2.png') }}" alt="logo EcoIt"></a> 
