Add footer & header responsive

--- a/public/assets/scss/config.scss
+++ b/public/assets/scss/config.scss
@@ -1,52 +1,3 @@
-/* ----- DISPLAY BASE ----- */
-
-.flex {
-  display: flex;
-}
-
-.block {
-  display: block;
-}
-
-.i-block {
-  display: inline-block;
-}
-
-.none {
-  display: none;
-}
-
-/* ----- end DISPLAY BASE ----- */
-
-/* ----- DISPLAY LOCATION ----- */
-.flex_c {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* ----- end DISPLAY LOCATION ----- */
-
-/* ----- DISPLAY ORIENTATION ----- */
-
-.flex_col {
-  flex-direction: column;
-}
-
-.flex_col-re {
-  flex-direction: column;
-}
-
-.flex_row {
-  flex-direction: row;
-}
-
-.flex_row-re {
-  flex-direction: row-reverse;
-}
-
-/* ----- end DISPLAY ORIENTATION ----- */
-
 /* ----- POSITION ----- */
 
 .posA {
@@ -62,3 +13,47 @@
 }
 
 /* ----- end POSITION ----- */
+
+/* ----- LAYER ----- */
+
+.z1 {
+  z-index: 1;
+}
+.z2 {
+  z-index: 2;
+}
+.z3 {
+  z-index: 3;
+}
+.z4 {
+  z-index: 4;
+}
+.z5 {
+  z-index: 5;
+}
+
+/* ----- end LAYER ----- */
+
+/* ----- RADIUS ----- */
+
+rs10 {
+  border-radius: 10%;
+}
+
+rs20 {
+  border-radius: 20%;
+}
+
+rs30 {
+  border-radius: 30%;
+}
+
+rs40 {
+  border-radius: 40%;
+}
+
+rs50 {
+  border-radius: 50%;
+}
+
+/* ----- end RADIUS ----- */
