--- a/public/assets/scss/header.scss
+++ b/public/assets/scss/header.scss
@@ -1,4 +1,18 @@
-@import "../scss/variables";
+$breakpoints: (
+  "phone": 500px,
+  "tablet": 700px,
+  "tablet-large": 900px,
+  "desktop": 1054px,
+  "desktop-large": 1300px,
+);
+
+$colorLight1: #c8f9cd;
+$colorLight2: #80ed99;
+$colorLight3: #57cc99;
+$colorDark1: #38a3a5;
+$colorDark2: #22577a;
+$colorDark: #0e0101;
+$colorWhite: #edf6f9;
 
 header,
 .hd-navbtn,
@@ -14,8 +28,6 @@ header,
 header nav,
 .hd-head,
 .hd-title,
-.hd-hlogobox,
-.hd-hlogobox a,
 .hd-navbtn {
   display: flex;
 }
@@ -28,13 +40,9 @@ header {
   margin-bottom: 50px;
 }
 
-//-----------------------------------
-// ---------- HEADER ICON -----------
-//-----------------------------------
+/* ---------- HEADER ICON ----------- */
 
 .hd-head,
-.hd-hlogobox,
-.hd-hlogobox a,
 .hd-navbtn {
   justify-content: center;
   align-items: center;
@@ -52,22 +60,6 @@ header {
     }
   }
 
-  .hd-hlogobox {
-    @include media-max("tablet") {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      height: 80px;
-      width: 80px;
-      border-radius: 50%;
-
-      .hd-hlogo {
-        height: 65px;
-        width: 65px;
-      }
-    }
-  }
-
   .hd-title {
     @include media-max("tablet-large") {
       display: none;
@@ -75,88 +67,9 @@ header {
   }
 }
 
-// ---------- end HEADER ICON -------
-//-----------------------------------
+/* ---------- end HEADER ICON ------- */
 
-//-----------------------------------
-//------------HEADER DARKMODE--------
-//-----------------------------------
-
-.hd-switchwrap {
-  position: absolute;
-  right: 75px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  z-index: 5;
-}
-
-/* Slider Box */
-.hd-switch {
-  position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 15px;
-  border-radius: 15%;
-}
-
-/* Hide Checkbox */
-.hd-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* Slider */
-.hd-slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 15%;
-  background-color: #0e0101;
-  cursor: pointer;
-  transition: 0.4s;
-}
-
-.hd-slider:before {
-  position: absolute;
-  content: "";
-  height: 20px;
-  width: 20px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  margin: auto 0;
-  border-radius: 50%;
-  background: #0e0101 url("../icons/ampoule-bleu.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-input:checked + .hd-slider {
-  background-color: #edf6f9;
-}
-
-input:checked + .hd-slider:before {
-  transform: translate(13px);
-  box-shadow: 0 0 3px #edf6f9;
-  background: #edf6f9 url("../icons/ampoule.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-//--------- end HEADER DARKMODE------
-//-----------------------------------
-
-//-----------------------------------
-//------------HEADER NAV-------------
-//-----------------------------------
+/* ------------HEADER NAV------------- */
 
 .hd-navdropdown {
   display: inline-block;
@@ -226,8 +139,7 @@ header hr {
   display: block;
 }
 
-//------------ end HEADER NAV--------
-//-----------------------------------
+/* ---------- end HEADER NAV-------- */
 
 /* --------- MEDIA QUERIES --------- */
 
@@ -240,42 +152,8 @@ header hr {
 }
 
 header {
-  @include media-min("phone") {
-    .hd-hlogobox {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      height: 120px;
-      width: 120px;
-      border-radius: 50%;
-      z-index: 4;
-    }
-
-    .hd-hlogo {
-      height: 100px;
-      width: 100px;
-    }
-  }
-}
-
-header {
   @include media-min("tablet") {
     height: 75px;
-
-    .hd-hlogobox {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      height: 120px;
-      width: 120px;
-      border-radius: 50%;
-      z-index: 4;
-    }
-
-    .hd-hlogo {
-      height: 100px;
-      width: 100px;
-    }
 
     .hd-switchwrap {
       bottom: 17px;
@@ -321,18 +199,6 @@ header {
 header {
   @include media-min("tablet-large") {
     height: 150px;
-
-    .hd-hlogobox {
-      top: 20px;
-      left: 20px;
-      height: 170px;
-      width: 170px;
-    }
-
-    .hd-hlogo {
-      height: 150px;
-      width: 150px;
-    }
 
     .hd-switchwrap {
       bottom: 47px;
