--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -1,31 +1,33 @@
-<div class="footer-wrapper">
-        <div class="ft-head">
-            <div class="ft-hcontain">
-                <a href="#"><img class="ft-logosite" src="{{ asset('assets/logo/ecoIt2.png') }}" alt="logo EcoIt"></a> 
+
+    <div class="ft_wrapper">
+        <div class="ft_head">
+            <div class="ft_logobox">
+                <a href="#"><img class="ft_logo" src="{{ asset('assets/storage/logo/ecoIt2.png') }}" alt="logo EcoIt"></a> 
             </div>
         </div>
-        <div class="ft-main">
-            <div class="ft-mcontain">
-                <ul class="ft-mlistlogo">
-                    <li><a href="#"><img class="ft-logo" src="{{ asset('assets/logo/facebookNoir.png') }}" alt="logo-Facebook"></a></li>
-                    <li><a href="#"><img class="ft-logo" src="{{ asset('assets/logo/twitterNoir.png') }}" alt="logo-twitter"></a></li>
-                    <li><a href="#"><img class="ft-logo" src="{{ asset('assets/logo/youtubeNoir.png') }}" alt="logo-youtube"></a></li>
+        <div class="ft_main">
+            <div class="ft_main-contain">
+                <ul class="ft_listlogo">
+                    <li><a href="#"><img class="ft_otherlogo" src="{{ asset('assets/storage/logo/facebookNoir.png') }}" alt="logo_Facebook"></a></li>
+                    <li><a href="#"><img class="ft_otherlogo" src="{{ asset('assets/storage/logo/twitterNoir.png') }}" alt="logo_twitter"></a></li>
+                    <li><a href="#"><img class="ft_otherlogo" src="{{ asset('assets/storage/logo/youtubeNoir.png') }}" alt="logo_youtube"></a></li>
                 </ul>
             </div>
-            <div class="ft-mcontain ft-mcontains">
-                <ul class="ft-listtext">
+            <div class="ft_main-contain ft_main-contains">
+                <ul class="ft_list-text">
                     <li><a href="#">Mentions légales</a></li>
                     <li><a href="#">Politique de confidentialité</a></li>
                     <li><a href="#">Paramétrage des cookies</a></li>
                 </ul>
             </div>
         </div>
-        <div class="ft-legs">
-            <img class="ft-imgcertification" src="{{ asset('assets/img/certification.png') }}" alt="Certification Qualité">
-            <p class="ft-p">Certification Qualité</p>
+        <div class="ft_legs">
+            <img class="ft_imgcertification" src="{{ asset('assets/storage/image/certification.png') }}" alt="Certification Qualité">
+            <p class="ft_p">Certification Qualité</p>
         </div>
     </div>
-    <div class="ft-footer light">
-        <p class="ft-p2 ft-line">Copyright 2022</p>
-        <p class="ft-p2">EcoIt  -  L'école écologique du web</p>
+    <div class="ft_footer light">
+        <p class="ft_p2 ft_line">Copyright 2022</p>
+        <p class="ft_p2">EcoIt  -  L'école écologique du web</p>
     </div>
+
