--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -1,7 +1,7 @@
 
     <div class="ft_wrapper">
         <div class="ft_head">
-            <div class="ft_logobox">
+            <div class="ft_logobox key_bg3">
                 <a href="#"><img class="ft_logo" src="{{ asset('assets/storage/logo/ecoIt2.png') }}" alt="logo EcoIt"></a> 
             </div>
         </div>
@@ -15,19 +15,19 @@
             </div>
             <div class="ft_main-contain ft_main-contains">
                 <ul class="ft_list-text">
-                    <li><a href="#">Mentions légales</a></li>
-                    <li><a href="#">Politique de confidentialité</a></li>
-                    <li><a href="#">Paramétrage des cookies</a></li>
+                    <li><a class="font-f3 key_ftdw" href="#">Mentions légales</a></li>
+                    <li><a class="font-f3 key_ftdw" href="#">Politique de confidentialité</a></li>
+                    <li><a class="font-f3 key_ftdw" href="#">Paramétrage des cookies</a></li>
                 </ul>
             </div>
         </div>
         <div class="ft_legs">
             <img class="ft_imgcertification" src="{{ asset('assets/storage/image/certification.png') }}" alt="Certification Qualité">
-            <p class="ft_p">Certification Qualité</p>
+            <p class="ft_p font-f3">Certification Qualité</p>
         </div>
     </div>
-    <div class="ft_footer light">
-        <p class="ft_p2 ft_line">Copyright 2022</p>
-        <p class="ft_p2">EcoIt  -  L'école écologique du web</p>
+    <div class="ft_footer key_bg1">
+        <p class="ft_p2 ft_line font-f3">Copyright 2022</p>
+        <p class="ft_p2 font-f3">EcoIt  -  L'école écologique du web</p>
     </div>
 
