--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,26 +15,26 @@
     <link rel="stylesheet" href="{{ asset('assets/scss/switch.css') }}">
     {% block styleSheets %}{% endblock %}
 </head>
-<body class="light theme-light">
+<body class="key_bgwb light theme-light">
     
-    <header>
+    <header class="key_bg1">
         <div class="hd-head">
             <div class="hd-title">
-                <h1>Eco-Tech Eco-Web</h1>
-                <h2>Les formations web-écologique</h2>
+                <h1 class="font-f1 key_ftdw">Eco-Tech Eco-Web</h1>
+                <h2 class="font-f1 key_ftdw">Les formations web-écologique</h2>
             </div>
-            <div class="hd_logobox">
+            <div class="hd_logobox key_bg3">
                <a href=""><img class="hd_logo" src="{{ asset('assets/storage/logo/ecoIt2.png') }}" alt="logo-ecoIt"></a> 
             </div>
         </div>
         {% include "_modules/_switch.html.twig" %}
         <nav class="hd-navdropdown">
-            <button onclick="dropdownMenu()" id="nav-btn" class="hd-navbtn" style="background-color: #c7f9cc" />
-                <div class="hd-iconNav headNav-icon1"></div>
-                <div class="hd-iconNav headNav-icon2"></div>
-                <div class="hd-iconNav headNav-icon3"></div>
+            <button onclick="dropdownMenu()" id="nav-btn" class="hd-navbtn key_bg1" style="background-color: #c7f9cc" />
+                <div class="hd-iconNav headNav-icon1 key_bgwd"></div>
+                <div class="hd-iconNav headNav-icon2 key_bgwd"></div>
+                <div class="hd-iconNav headNav-icon3 key_bgwd"></div>
             </button>
-            <ul id="dropdown" class="hd-dropdownContent">
+            <ul id="dropdown" class="hd-dropdownContent key_bg2">
                 {% block navlist %}{% endblock %}
             </ul>
         </nav>
@@ -45,7 +45,7 @@
         {% block main %}{% endblock %}
     </main>
 
-    <footer>
+    <footer class="key_bg2">
         {% include "base/_footer.html.twig" %}
     </footer>
 
