--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}EcoIT{% endblock %}
-{% block css %}
-<link rel="stylesheet" href="{{ asset('assets/scss/main.css') }}">
+{% block styleSheets %}
+<link rel="stylesheet" href="{{ asset('assets/pages/home.css') }}">
 {% endblock %}
 
 {% block navlist %}
