--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{{ asset('assets/scss/switch.css') }}">
     {% block styleSheets %}{% endblock %}
 </head>
-<body class="key_bgwb light theme-light">
+<body class="light theme-light key_bgwd">
     
     <header class="key_bg1">
         <div class="hd-head">
