--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -16,11 +16,11 @@
     <li class="hd-li hd-liHomeright font-f1">
         <a class="key_ftdw" href="">Contact</a>   
     </li>
-    <li class="hd-li hd-liHome1 box-shadow left font-f1">
-        <a class="key_ftdw" href="">S'incrire</a>           
+    <li class="hd-li hd-homeli left font-f1 key_bg3">
+        <a class="nav_a key_ftdw" href="">S'incrire</a>           
     </li><hr>
-    <li class="hd-li hd-liHome2 box-shadow right font-f1">
-        <a class="key_ftdw" href="">Connexion</a>              
+    <li class="hd-li hd-homeli right font-f1 key_bg3">
+        <a class="nav_a key_ftdw" href="">Connexion</a>              
     </li>
 {% endblock %}
 
