--- a/public/assets/scss/header.scss
+++ b/public/assets/scss/header.scss
@@ -2,8 +2,8 @@ $breakpoints: (
   "phone": 500px,
   "tablet": 700px,
   "tablet-large": 900px,
-  "desktop": 1054px,
-  "desktop-large": 1300px,
+  "desktop": 1024px,
+  "desktop-large": 1200px,
 );
 
 $colorLight1: #c8f9cd;
@@ -105,7 +105,6 @@ header {
   height: 250px;
   width: 100%;
   overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -176,7 +175,7 @@ header {
       top: 50px;
       height: 50px;
       width: 78%;
-      padding-left: 20px;
+      // padding-left: 20px;
     }
 
     .hd-li {
@@ -185,12 +184,8 @@ header {
       padding: 5px;
     }
 
-    .hd-liHome1,
-    .hd-liHome2 {
+    .hd-homeli {
       box-shadow: 1px 1px 6px #0e0101;
-    }
-
-    .hd-liHome2 {
       padding: 5px 15px 5px 15px;
     }
 
@@ -215,20 +210,18 @@ header {
 
     .hd-dropdownContent {
       display: flex;
-      top: 50px;
-      height: 100px;
-      width: 50%;
+      top: 100px;
+      height: 50px;
+      width: 60%;
       padding-left: 50px;
-      border-top-left-radius: 25%;
-      border-bottom-left-radius: 25%;
     }
 
     .hd-title {
       display: flex;
-      position: absolute;
-      top: 70px;
-      left: 200px;
       flex-direction: column;
+      position: absolute;
+      top: 45px;
+      left: 200px;
       width: 450px;
     }
 
@@ -246,16 +239,16 @@ header {
 header {
   @include media-min("desktop") {
     .hd-title {
-      display: flex;
-      position: absolute;
       top: 55px;
       left: 200px;
-      flex-direction: column;
-      width: 450px;
     }
 
     .hd-title h1 {
       padding-bottom: 10px;
+    }
+
+    .hd-dropdownContent {
+      width: 50%;
     }
   }
 }
@@ -264,6 +257,10 @@ header {
   @include media-min("desktop-large") {
     .hd-title h2 {
       display: block;
+    }
+
+    .hd-dropdownContent {
+      width: 40%;
     }
   }
 }
