--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
         <div class="hd-head">
             <div class="hd-title">
                 <h1 class="font-f1 key_ftdw">Eco-Tech Eco-Web</h1>
-                <h2 class="font-f1 key_ftdw">Les formations web-écologique</h2>
+                <h2 class="font-f1 key_ftdw">Les solutions web-écologique</h2>
             </div>
             <div class="hd_logobox key_bg3">
                <a href=""><img class="hd_logo" src="{{ asset('assets/storage/logo/ecoIt2.png') }}" alt="logo-ecoIt"></a> 
@@ -34,7 +34,7 @@
                 <div class="hd-iconNav headNav-icon2 key_bgwd"></div>
                 <div class="hd-iconNav headNav-icon3 key_bgwd"></div>
             </button>
-            <ul id="dropdown" class="hd-dropdownContent key_bg2">
+            <ul id="dropdown" class="hd-dropdownContent">
                 {% block navlist %}{% endblock %}
             </ul>
         </nav>
