--- a/public/assets/pages/home.scss
+++ b/public/assets/pages/home.scss
@@ -1,32 +1,52 @@
 main,
-.m-btnWrap,
-aside,
-.aside-wrap,
-.aside-wrap ul {
+.main-wrapper,
+.home_btn-wrap,
+.home_aside,
+.home_aside-title,
+.home_aside-wrap,
+.home_aside-ul,
+.home_aside-li,
+.home_aside-box,
+.home_video-contain,
+.home_video-box,
+.home_section,
+.home_listlogo {
   display: flex;
 }
 
 main,
-.m-btnWrap,
-aside,
-.aside-wrap {
+.home_btn-wrap,
+.home_aside,
+.home_aside-title,
+.home_aside-wrap,
+.home_aside-box,
+.home_video-box,
+.home_listlogo {
   justify-content: center;
   align-items: center;
 }
 
-.m-btnWrap,
-.aside-wrap ul {
+main,
+.home_btn-wrap,
+.home_aside,
+.home_aside-ul,
+.home_aside-box,
+.home_video-contain,
+.home_section {
   flex-direction: column;
 }
 
 main {
   margin-top: 100px;
+  margin-bottom: 100px;
   padding: 20px 0 50px 0;
 }
 
+/* ----- SECTION ----- */
+
 section {
   width: 90%;
-  padding-top: 100px;
+  padding-top: 50px;
 
   h2,
   h3 {
@@ -34,78 +54,187 @@ section {
     padding-bottom: 10px;
   }
 
-  .m-headsection {
+  .home_head {
     padding: 20px 0 30px 10px;
-    margin: 0 0 30px 0;
+    margin: 0 0 50px 0;
     border-top-right-radius: 10%;
     border-bottom-left-radius: 10%;
   }
 
-  .m-divTitle,
-  .m-articlep {
+  .home_head,
+  .home_article-p {
     padding: 15px;
   }
 
-  .m-p1,
-  .m-p3 {
+  .home-p1,
+  .home-p3 {
     margin-bottom: 15px;
   }
 
-  .m-divTitle {
+  .home-head {
     text-align: center;
   }
 
-  .m-articleh2,
-  .m-articleh3,
-  .m-articlep {
+  .home_article-h2,
+  .home_article-h3,
+  .home_article-p {
     padding-bottom: 20px;
     transition: ease 0.3s;
   }
 
-  .m-articlep {
+  .home_article-p {
     line-height: 20px;
   }
 
-  .m-articlep:hover {
+  .home_article-p:hover {
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20%;
   }
 
-  .m-btnWrap {
+  .home_btn-wrap {
     width: 100%;
     height: 300px;
   }
 
-  .m-btnbox,
-  .m-btn {
+  .home-btnbox,
+  .home-btn {
     padding: 15px;
     border-radius: 15%;
     transition: ease 0.2s;
   }
 
-  .m-btn:hover {
+  .home-btn:hover {
+    transform: scale(1.05);
+  }
+}
+
+/* ----- end SECTION ----- */
+
+/* ----- ASIDE ----- */
+
+.home_aside {
+  height: 650px;
+  width: 90%;
+
+  .home_aside-title {
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    margin-top: 15px;
+  }
+
+  .home_aside-wrap {
+    width: 90%;
+    height: 100%;
+  }
+
+  .home_aside-ul {
+    width: 100%;
+    height: 90%;
+  }
+
+  .home_aside-li {
+    width: 100%;
+    height: 150px;
+    margin: 7px 0 7px 0;
+    box-shadow: 1px 1px 6px #0e0101;
+  }
+
+  .home_aside-li:hover {
     transform: scale(1.05);
   }
 
-  aside {
-    height: 500px;
-    width: 100%;
+  .home_li-text {
+    width: 200px;
+    height: 235px;
+    margin-left: 5px;
+  }
 
-    .aside-wrap {
-      width: 90%;
-      height: 100%;
-    }
+  .home_li-h2 {
+    margin: 10px 0 10px 10px;
+  }
 
-    .aside-wrap ul {
-      width: 100%;
-      height: 90%;
-    }
+  .home_li-p {
+    margin: 0 10px 0 10px;
+  }
 
-    li {
-      width: 100%;
-      height: 150px;
-      margin: 7px 0 7px 0;
-      box-shadow: 1px 1px 6px #0e0101;
+  .home_aside-box {
+    height: 149px;
+    width: 80px;
+    margin-right: 15px;
+  }
+
+  .home_li-indicator {
+    width: 80px;
+    height: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .home_li-img {
+    width: 80px;
+    height: 100px;
+  }
+}
+
+/* ----- end ASIDE ----- */
+
+/* ----- VIDEO ----- */
+
+.home_video-contain {
+  width: 90%;
+  height: 550px;
+  margin: 50px 0 25px 0;
+  padding: 25px 0 25px 0;
+  justify-content: space-between;
+
+  .home_video-box {
+    height: 250px;
+  }
+
+  .home_video {
+    height: 220px;
+    width: 90%;
+  }
+
+  .line {
+    border-bottom: 1px solid;
+  }
+}
+
+/* ----- end VIDEO ----- */
+
+/* ----- PARTNER ----- */
+
+.home_section {
+  width: 90%;
+  height: 300px;
+  margin: 50px 0 25px 0;
+  padding: 50px 0 10px 0;
+  text-align: center;
+  border-top: 2px solid;
+
+  .home_partner-title {
+    margin-bottom: 50px;
+  }
+
+  .home_logo-box {
+    margin: 20px 0 20px 0;
+  }
+
+  .home_partnerlogo {
+    width: 50px;
+    height: 50px;
+    margin: 0 10px 0 10px;
+  }
+}
+
+/* ----- end PARTNER ----- */
+
+@mixin media-min($_key) {
+  @media screen and(min-width: map-get($breakpoints, $_key)) {
+    & {
+      @content;
     }
   }
 }
